Fix mobile navbar collapse menu

--- a/auacm/app/static/angular/src/styles.css
+++ b/auacm/app/static/angular/src/styles.css
@@ -90,3 +90,7 @@ body {
 .hover-pointer {
     cursor: pointer;
 }
+
+.dropdown-backdrop {
+    position: static;
+}
